manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "fast-api-sample"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "fast-api-sample"
  template:
    metadata:
      labels:
        app: "fast-api-sample"
    spec:
      containers:
        - name: "fast-api-sample"
          image: "taethniacr.azurecr.io/fast-api-sample"
          ports:
          - containerPort: 8080
