manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "fast-api-sample"
    labels:
        app: "fast-api-sample"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "fast-api-sample"
