manifests/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: fast-api-sample-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - FQDN
      secretName: tls-secret
      --validate=false:
  rules:
    - host: FQDN
      http:
        paths:
          - path: /(.*)
            pathType: Exact
            backend:
              service:
                name: fast-api-sample
                port:
                  number: 8080
